appId: io.leather.mobilewallet
---
- tapOn:
    text: 'Add Wallet'
- tapOn:
    id: 'createNewWalletButton'
- tapOn:
    id: 'walletCreationBackedUpButton'
- runFlow:
    when:
      true: ${SECURE == "yes"}
    commands:
      - tapOn:
          text: 'Enable device security'
- runFlow:
    when:
      true: ${SECURE != "yes"}
    commands:
      - tapOn:
          text: 'Skip for now'
      - waitForAnimationToEnd:
          timeout: 3000
      - tapOn:
          text: 'Continue'
- assertVisible:
    id: 'homeAccountCard-0'
