appId: io.leather.mobilewallet
---
- runFlow:
    file: ./unlock.yaml
    when:
      visible: Passcode field
- tapOn:
    id: 'homeDeveloperToolsButton'
- tapOn:
    id: 'devConsoleClearWalletsButton'
- tapOn:
    id: 'backButton'
- assertVisible:
    id: 'homeCreateWalletCard'
