appId: io.leather.mobilewallet
---
- runFlow:
    when:
      platform: Android
    commands:
      - inputText: hello
      - pressKey: enter
- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn: Passcode field
      - inputText: hello
      - pressKey: enter
